--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,78 @@
-<p>home works!</p>
+<section id="hero" class="hero-section d-flex align-items-center justify-content-center  text-center">
+    <div class="hero-overlay"></div>
+    <div class="container position-relative z-1">
+        <h1 class="display-3 fw-bold mb-4">Vaš stil, naša strast</h1>
+        <p class="lead mb-5">Vrhunske frizure i brade za naše korisnike.</p>
+        <a routerLink="/companies" class="btn btn-primary btn-lg custom-btn-hero">Pretražite salone</a>
+    </div>
+</section>
+
+<section id="services" class="py-5 bg-light">
+    <div class="container">
+        <h2 class="text-center mb-5 display-4 fw-bold">Naše Usluge</h2>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card h-100 shadow-sm border-0">
+                    <div class="card-body text-center">
+                         <img src="assets/logos/logo11.png" alt="Klasično šišanje">
+                        <h5 class="card-title fw-bold">Klasično šišanje</h5>
+                        <p class="card-text">Precizno šišanje za besprekoran izgled, prilagođeno vašem stilu.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100 shadow-sm border-0">
+                    <div class="card-body text-center">
+                        <img src="assets/logos/logo22.png" alt="Oblikovanje brade">
+                        <h5 class="card-title fw-bold">Oblikovanje brade</h5>
+                        <p class="card-text">Profesionalno oblikovanje i nega brade za savršen izgled.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100 shadow-sm border-0">
+                    <div class="card-body text-center">
+                        <img src="assets/logos/logo33.png" alt="Nega kose">
+                        <h5 class="card-title fw-bold">Nega kose</h5>
+                        <p class="card-text">Tretmani za jačanje i oporavak kose, za zdrav i sjajan izgled.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="about" class="py-5">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-6 mb-4 mb-md-0">
+                <img src="assets/images/image1.jpg" class="img-fluid rounded shadow" alt="O nama">
+            </div>
+            <div class="col-md-6">
+                <h2 class="mb-4 display-4 fw-bold">Kvalitet i tradicija</h2>
+                <p class="lead">U "Barber Visual" salonu, spajamo dugogodišnje iskustvo sa modernim trendovima kako
+                    bismo vam pružili vrhunsku uslugu. Naš cilj je da svaki klijent ode sa osmehom i frizurom koja ga
+                    čini sigurnim.</p>
+                <p>Koristimo samo najkvalitetnije proizvode i posvećeni smo individualnom pristupu svakom klijentu.
+                    Dođite i uverite se zašto smo najbolji izbor za vašu frizuru i bradu.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="short-about" class="py-5 text-center">
+    <div class="container">
+        <h2 class="mb-4 display-4 fw-bold">Više od frizure – to je iskustvo.</h2>
+        <p class="lead mb-5">U "Barber Visual" verujemo da je odlazak kod frizera ritual. Posvećeni smo stvaranju
+            prijatne atmosfere i pružanju personalizovane nege koja nadmašuje vaša očekivanja.</p>
+        <a routerLink="/about" class="btn btn-primary btn-lg custom-btn-hero">Saznajte više o nama</a>
+    </div>
+</section>
+
+<section id="book-now" class="py-5 bg-dark text-white text-center">
+    <div class="container">
+        <h2 class="display-4 fw-bold mb-4">Spremni za transformaciju?</h2>
+        <p class="lead mb-5">Zakažite svoj termin danas i otkrijte svoj novi izgled!</p>
+        <a routerLink="/companies" class="btn btn-success btn-lg custom-btn-hero">Zakaži termin</a>
+    </div>
+</section>
