--- a/src/app/auth/dashboard-components/dashboard-companies/dashboard-companies.component.html
+++ b/src/app/auth/dashboard-components/dashboard-companies/dashboard-companies.component.html
@@ -124,7 +124,7 @@
                     <label for="imageUpload" class="form-label mt-3">Dodaj nove slike</label>
                     <div class="drag-drop-area" [class.is-dragging]="isDragging" (dragover)="onDragOver($event)"
                         (dragleave)="onDragLeave($event)" (drop)="onDrop($event)">
-                        <i class="bi bi-folder-plus icon-folder"></i>
+                        <i class="fas fa-folder-open icon-folder"></i>
                         <p>Prevucite slike ovde, ili
                             <label for="imageUpload" class="browse-link">Pretražite</label>
                         </p>
@@ -154,10 +154,10 @@
                 <div class="col-12 text-center mt-4">
                     <button type="submit" class="btn btn-success me-2"
                         [disabled]="companyForm.invalid && existingImageUrls.length === 0 && uploadedFiles.length === 0">
-                        <i class="bi bi-save"></i> Sačuvaj izmene
+                        <i class="fa-solid fa-check"></i> Sačuvaj izmene
                     </button>
                     <button type="button" class="btn btn-secondary" (click)="cancelEdit()">
-                        <i class="bi bi-x-circle"></i> Odustani
+                        <i class="fa-solid fa-xmark"></i> Odustani
                     </button>
                 </div>
             </div>
