--- a/src/app/auth/dashboard-components/dashboard-users/dashboard-users.component.html
+++ b/src/app/auth/dashboard-components/dashboard-users/dashboard-users.component.html
@@ -124,21 +124,13 @@
                         Telefon je obavezan.
                     </div>
                 </div>
-
-                <!-- <div class="col-12 mt-4">
-                    <h5>Slike Kompanije</h5>
-                    <div class="existing-images-container row g-2 mb-3">
-                        
-                    </div>
-                </div> -->
-
                 <div class="col-12 text-center mt-4">
                     <button type="submit" class="btn btn-success me-2"
                         [disabled]="ownerForm.invalid">
-                        <i class="bi bi-save"></i> Sačuvaj izmene
+                        <i class="fa-solid fa-check"></i> Sačuvaj izmene
                     </button>
                     <button type="button" class="btn btn-secondary" (click)="cancelEdit()">
-                        <i class="bi bi-x-circle"></i> Odustani
+                        <i class="fa-solid fa-xmark"></i> Odustani
                     </button>
                 </div>
             </div>
