--- a/src/app/company-barbers/company-barbers.component.html
+++ b/src/app/company-barbers/company-barbers.component.html
@@ -89,11 +89,10 @@
           class="list-group-item list-group-item-action barber-item d-flex justify-content-between align-items-center"
           (click)="onBarberClick(barber.barberId)" [class.active]="selectedBarberId === barber.barberId">
           <div>
-            <i class="bi bi-person-badge-fill me-2"></i>
+            <i class="fa-solid fa-user me-2"></i>
             <strong>{{ barber.barberName }}</strong>
-            <!-- <small class="text-muted d-block">Kompanija: {{ barber.companyName }}</small> -->
           </div>
-          <i class="bi bi-chevron-right"></i>
+          <i class="fa-solid fa-chevron-down"></i>
         </a>
         <p *ngIf="barbers?.length === 0" class="text-muted mt-3 text-center">Nema registrovanih frizera za ovu
           kompaniju.</p>
@@ -110,7 +109,7 @@
         <p class="text-muted">Izabran frizer: <strong>{{ getSelectedBarberName() }}</strong></p>
       </div>
       <div class="col-12 col-md-6 text-md-end">
-        <label for="datePicker" class="form-label visually-hidden">Izaberi datum:</label>
+        <label for="datePicker" class="form-label me-1">Izaberi datum:</label>
         <input type="date" id="datePicker" [min]="today" [(ngModel)]="selectedDate" (change)="onDateChange()"
           class="form-control d-inline-block w-auto" />
       </div>
